--- a/doc/source/_static/custom.css
+++ b/doc/source/_static/custom.css
@@ -16,19 +16,25 @@
     color: yellow;
 }
 
+.bd-header{
+    0 .125rem 0rem 0 rgb(255,172,0); /*rgb(255,172,0)*/
+}
+
 
 /* anything related to the light theme */
 html[data-theme="light"] {
-
     /* whatever you want to change */
-    background: white;
+    background: rgb(245, 245, 245);
+    --pst-color-on-background: rgb(35, 35, 35);
+    --pst-color-background: rgb(245, 245, 245);
+    --sd-color-card-border-hover: rgb(255,172,0);
 }
 
 /* anything related to the dark theme */
 html[data-theme="dark"] {
-
     /* whatever you want to change */
     background: rgb(35, 35, 35);
     --pst-color-on-background: rgb(35, 35, 35);
     --pst-color-background: rgb(35, 35, 35);
+    --sd-color-card-border-hover: rgb(255,172,0);
 }
