--- a/doc/source/_static/custom.css
+++ b/doc/source/_static/custom.css
@@ -17,9 +17,8 @@
 }
 
 .bd-header{
-    0 .125rem 0rem 0 rgb(255,172,0); /*rgb(255,172,0)*/
+    box-shadow: 0 0rem 0rem 0 rgb(255,172,0); /* var(--pst-color-shadow); */
 }
-
 
 /* anything related to the light theme */
 html[data-theme="light"] {
@@ -28,6 +27,10 @@ html[data-theme="light"] {
     --pst-color-on-background: rgb(35, 35, 35);
     --pst-color-background: rgb(245, 245, 245);
     --sd-color-card-border-hover: rgb(255,172,0);
+    
+    .sd-shadow-sm {
+        box-shadow: 0 0rem 0rem rgba(250, 250, 250, 0.6) !important
+    }
 }
 
 /* anything related to the dark theme */
@@ -37,4 +40,8 @@ html[data-theme="dark"] {
     --pst-color-on-background: rgb(35, 35, 35);
     --pst-color-background: rgb(35, 35, 35);
     --sd-color-card-border-hover: rgb(255,172,0);
+
+    .sd-shadow-sm {
+        box-shadow: 0 0rem 0rem rgba(250, 250, 250, 0.6) !important
+    }
 }
